--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -61,7 +61,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.1</version>
+				<version>1.3</version>
+				<dependencies>
+					<dependency>
+						<groupId>com.redhat.victims</groupId>
+						<artifactId>enforce-victims-rule</artifactId>
+						<version>1.3.1</version>
+						<type>jar</type>
+					</dependency>
+				</dependencies>				
 				<executions>
 					<execution>
 						<id>enforce-build-requirements</id>
@@ -82,6 +90,22 @@
 							<ignoreCache>true</ignoreCache>
 						</configuration>
 					</execution>
+					<execution>
+						<id>apply-enforce-victims-rule</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<rules>
+								<rule implementation="com.redhat.victims.VictimsRule">
+									<metadata>fatal</metadata>
+									<fingerprint>fatal</fingerprint>
+									<updates>auto</updates>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>					
 				</executions>
 			</plugin>
 			<plugin>
@@ -115,7 +139,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
+				<version>2.9.1</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
@@ -143,7 +167,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.3</version>
 				<configuration>
 					<reportPlugins>
 						<plugin>
@@ -154,12 +178,12 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-project-info-reports-plugin</artifactId>
-							<version>2.4</version>
+							<version>2.7</version>
 						</plugin>
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-javadoc-plugin</artifactId>
-							<version>2.8.1</version>
+							<version>2.9.1</version>
 						</plugin>
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
@@ -172,12 +196,12 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-surefire-report-plugin</artifactId>
-							<version>2.12</version>
+							<version>2.15</version>
 						</plugin>
 						<plugin>
 							<groupId>org.codehaus.mojo</groupId>
 							<artifactId>cobertura-maven-plugin</artifactId>
-							<version>2.5.1</version>
+							<version>2.5.2</version>
 							<configuration>
 								<formats>
 									<format>xml</format>
@@ -188,7 +212,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-checkstyle-plugin</artifactId>
-							<version>2.9.1</version>
+							<version>2.10</version>
 							<configuration>
 								<configLocation>checkstyle.xml</configLocation>
 							</configuration>
@@ -196,7 +220,7 @@
 						<plugin>
 							<groupId>org.apache.maven.plugins</groupId>
 							<artifactId>maven-pmd-plugin</artifactId>
-							<version>2.7.1</version>
+							<version>3.0.1</version>
 							<configuration>
 								<rulesets>
 									<ruleset>pmd-cpd.xml</ruleset>
